shifts app - added DDOS prevention functionality and initial collapsable parts of the script - wip still

--- a/Basic shifts app/static/css/styles.css
+++ b/Basic shifts app/static/css/styles.css
@@ -210,3 +210,26 @@ a:hover {
     display: inline-block; 
     border-radius: 0%;
 }
+
+.role_dropdown {
+    width: 300px; 
+    height: 40px; 
+    font-size: 16px;
+    padding: 5px;
+    border-radius: 5px; 
+}
+
+.collapsible {
+    background-color: #777;
+    display: inline-block;
+    padding: 18px;
+    width: 50%;
+    position: center;
+  }
+  
+  
+  .collapsed_menu {
+    padding: 0 18px;
+    display: none;
+    overflow: hidden;
+  }
